# generics-csv

./: CHANGELOG.md  README.md  generics-csv.cabal
.github/workflows/: haskell.yml
src/Data/CSV/: SOP.hs
tests/: Example.hs
