cabal-version:      3.6
name:               generics-csv
version:            0.1.0.0
synopsis:           Generics SOP-based CSV instances
description:        Please see README.md
license:            Apache-2.0
author:             paolo
maintainer:         paolo.veronelli@gmail.com
copyright:          Paolo Veronelli
category:           Database
extra-source-files: CHANGELOG.md

common options
  ghc-options:
    -Wall -Werror -Wcompat -Wincomplete-uni-patterns

library
  import: options
  exposed-modules:  Data.CSV.SOP
  build-depends:
    , base
    , bytestring
    , cassava
    , generics-sop
    , invariant
    , profunctors
    , time


  hs-source-dirs:   src
  default-language: Haskell2010

test-suite generics-csv-test
  import: options
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:   tests
  main-is:          Example.hs
  build-depends:
    , base
    , bytestring
    , cassava
    , generics-csv
    , generics-sop
    , invariant
    , profunctors
    , time
